# api/controllers/auth.js
@@ -2,7 +2,7 @@
 
 const accounts = require('../../db/collections/accounts');
 const tokens = require('../../db/collections/tokens');
-const makeJwt = require('../../jwt').makeJwt;
+const jwt = require('../../jwt');
 const merge = require('merge');
 const guid = require('node-uuid');
 const crypto = require('crypto');
@@ -54,20 +54,13 @@ function validate(auth){
 
     } else {
 
-        if (!auth.token && (!auth.email || !auth.password)) {
+        if ((!auth.email || !auth.password)) {
             throw {code: 400, message: 'email or password cannot be blank or missing.'};
         }
 
         return new Promise( (fulfill, reject) => {
 
             try {
-                if ( auth.token ){
-                    return fulfill({
-                        provider: 'token',
-                        password: auth.token
-                    });
-                }
-
                 const email = auth.email.toLowerCase();
 
                 const hash = crypto.createHmac('sha256', email)
@@ -85,26 +78,6 @@ function validate(auth){
             }
         });
     }
-}
-
-function createJwt(acct, key, res){
-
-    let claims;
-
-    claims = {
-        acc_id: acct.id,
-        key: key,
-        role: acct.role
-    };
-
-    makeJwt(claims)
-        .then( (jwt) => {
-            res.cookie( 'AUTH', jwt );
-            res.status(200).json({id: acct.id});
-        })
-        .catch( (err) => {
-            throw err;
-        });
 }
 
 function findAccount(auth, k){
@@ -131,51 +104,98 @@ function findAccount(auth, k){
 
 }
 
-module.exports.Login = (req, res) => {
+function doLogin(auth, req, res){
 
+    return new Promise( (fulfill, reject) => {
+
+        validate(auth)
+            .then((criteria) => {
+                auth = criteria;
+                return findAccount(criteria);
+            })
+            .then((acct) => {
+                // Social accounts can always login (get created if not)
+                return new Promise((fulfill, reject) => {
+
+                    if (acct.auth.provider !== 'social') {
+                        if (!acct.id)
+                            return reject( {code: 404, message: 'account does not exist.'} );
+
+                        if (acct.auth.password !== auth.password)
+                            return reject( {code: 401, message: 'invalid credentials.'} );
+
+                        return fulfill(acct);
+                    }
+
+                    if (!acct.id) {
+                        createAccount(acct, auth)
+                            .then((acct) => {
+                                fulfill(acct);
+                            })
+                            .catch((err) => {
+                                reject(err);
+                            });
+                    } else {
+                        fulfill(acct);
+                    }
+                })
+            })
+            .then((acct) => {
+                let key = ( req.connection.encrypted ? 'https' : 'http' ) + '://' + req.headers.host + '/api/auth/publickey';
+                return jwt.create(acct, key);
+            })
+            .then( (jwt) =>{
+                fulfill(jwt);
+            })
+            .catch((err) => {
+                reject(err);
+            });
+
+    });
+
+}
+
+module.exports.formLogin = (req, res) => {
+
+    let username = req.swagger.params.username.value;
+    let password = req.swagger.params.password.value;
+
+    let auth = {
+        name: '',
+        email: username,
+        password: password
+    };
+
+    doLogin(auth, req, res)
+        .then( (jwt)=>{
+            res.cookie('AUTH', jwt);
+            //res.status(200).json({id: acct.id});
+            res.redirect('/');
+        })
+        .catch((err) => {
+            res.redirect('/');
+            /*
+            res.status(err.code >= 400 && err.code <= 451 ? err.code : 500).json({
+                code: err.code || 0,
+                message: err.message
+            });
+            */
+        });
+};
+
+module.exports.Login = (req, res) => {
     let auth = req.swagger.params.auth.value;
 
-    validate(auth)
-        .then( (criteria) => {
-            auth = criteria;
-            return findAccount(criteria);
+    doLogin(auth, req, res)
+        .then( (jwt)=>{
+            res.cookie('AUTH', jwt);
+            res.status(200).json({code:0, message:''});
         })
-        .then( (acct) => {
-            // Social accounts can always login (get created if not)
-            new Promise( (fulfill, reject) =>{
-
-                if (acct.auth.provider !== 'social') {
-                    if (!acct.id)
-                        throw {code: 404, message: 'account does not exist.'};
-
-                    if (acct.auth.password !== auth.password)
-                        throw {code: 401, message: 'invalid credentials.'};
-
-                    return  fulfill(acct);
-                }
-
-                if (!acct.id){
-                    createAccount(acct, auth)
-                        .then( (acct) =>{
-                            fulfill(acct);
-                        })
-                        .catch( (err) => {
-                            reject(err);
-                        });
-                }else {
-                    fulfill(acct);
-                }
-            })
-            .then( (acct) => {
-                let key = ( req.connection.encrypted ? 'https' : 'http' ) + '://' + req.headers.host + '/api/auth/publickey';
-                createJwt(acct, key, res);
-            })
-            .catch( (err) => {
-                res.status(err.code >= 400 && err.code <= 451 ? err.code : 500).json( { code: err.code || 0, message: err.message } );
+        .catch((err) => {
+            res.status(err.code >= 400 && err.code <= 451 ? err.code : 500).json({
+                code: err.code || 0,
+                message: err.message
             });
-        })
-        .catch( (err) => {
-            res.status(err.code >= 400 && err.code <= 451 ? err.code : 500).json( { code: err.code || 0, message: err.message } );
         });
 };
 
@@ -191,36 +211,45 @@ function createAccount(acct, auth){
         created: new Date().toISOString(),
     });
 
+    if (!acct.role)
+        acct['role'] = 'user';
+
     return accounts.create(acct);
 }
 
 module.exports.Register = (req, res) => {
 
-    let auth = req.swagger.params.auth.value;
+    let data = req.swagger.params.auth.value;
 
-    validate(auth)
+    let hashedPassword;
+
+    validate(data)
         .then( (criteria) => {
+            hashedPassword = criteria.password;
             return findAccount(criteria);
         })
         .then( (acct) => {
 
             if (!acct.id) {
-                return createAccount(acct,auth);
+                acct['role'] = data.role;
+                acct.auth['password'] = hashedPassword;
+                return createAccount(acct, data);
             }
             else {
-                // multiple email accounts can't exist
-                if ( acct.auth.provider !== 'email' )
-                    throw {code: 403, message: 'account exists.'};
+                return new Promise( (fulfill, reject) => {
+                    // multiple email accounts can't exist
+                    if (acct.auth.provider !== 'email')
+                        reject({code: 403, message: 'account exists.'});
 
-                // If a social account exists, just do a login.
-                return new Promise( (fulfill) => {
+                    // If a social account exists, just do a login.
                     fulfill(acct);
-                });
+                } );
             }
         })
         .then( (acct) => {
-            let key = ( req.connection.encrypted ? 'https' : 'http' ) + '://' + req.headers.host + '/api/auth/publickey';
-            createJwt(acct, key, res);
+            res.status(200).json({id: acct.id});
+            //let key = ( req.connection.encrypted ? 'https' : 'http' ) + '://' + req.headers.host + '/api/auth/publickey';
+            //jwt.create(acct, key);
         })
         .catch( (err) => {
             res.status(err.code >= 400 && err.code <= 451 ? err.code : 500).json( { code: err.code || 0, message: err.message } );
@@ -232,44 +261,49 @@ let initRetry = 5;
 
 function init(){
 
-    findAccount( null, {
-        auth: {
-            provider: 'token',
-        },
-        name: 'root',
-        role: 'admin'
-    } )
-    .then( (acct) =>{
-        if (!acct.id){
+    let rawPassword = generator.generate({
+        length: 36,
+        numbers: true
+    });
 
-            var password = generator.generate({
-                length: 36,
-                numbers: true
-            });
+    let auth = {
+        email: 'admin@local',
+        password : rawPassword
+    };
 
-            acct.auth['password'] = password;
+    validate(auth)
+        .then( (criteria) => {
+            auth = criteria;
+            return findAccount(criteria);
+        })
+        .then( (acct) =>{
+            if (!acct.id){
 
-            createAccount( acct )
-            .then( (acct) =>{
-                console.log( 'created root account token => ' + acct.auth.password );
-            })
-            .catch( (err) => {
+                acct.auth['password'] = auth.password;
+                acct['name'] = 'Administrator';
+                acct['role' ] = 'admin';
+
+                createAccount( acct )
+                .then( (acct) =>{
+                    console.log( 'created root account, password => ' + rawPassword );
+                })
+                .catch( (err) => {
+                    console.log(err);
+                    process.exit(1);
+                });
+            } else {
+                console.log( 'root account already exists' );
+            }
+        })
+        .catch( (err) => {
+
+            if ( --initRetry == 0 ) {
                 console.log(err);
                 process.exit(1);
-            });
-        } else {
-            console.log( 'root account already exists, token => ' + acct.auth.password );
-        }
-    })
-    .catch( (err) => {
+            }
 
-        if ( --initRetry == 0 ) {
-            console.log(err);
-            process.exit(1);
-        }
-
-        setTimeout( init, 1000 );
-    });
+            setTimeout( init, 1000 );
+        });
 }
 
 
