# api/swagger/swagger.yaml
@@ -7,7 +7,6 @@ info:
   termsOfService: ''
   contact:
     name: ''
-    url: ''
     email: 'hello@steventaylor.me'
   license:
     name: ''
@@ -28,6 +27,7 @@ securityDefinitions:
       open: no security
       user: a user
       admin: admin user
+      system: system process
     flow: implicit
     authorizationUrl: https://my_aouth/
 
@@ -53,10 +53,7 @@ paths:
           description: health information
           schema:
             $ref: '#/definitions/Status'
-        400:
-          description: bad request
-        410:
-          description: invalid service id
+
         default:
           $ref: '#/responses/Error'
 
@@ -73,7 +70,6 @@ paths:
           schema:
             type: string
 
-
   /login:
     x-swagger-router-controller: auth
     post:
@@ -81,6 +77,8 @@ paths:
       security:
       - Oauth:
         - open
+      consumes:
+      - application/json
       parameters:
       - in: body
         name: auth
@@ -94,6 +92,36 @@ paths:
           schema:
             type: string
             description: koo.io jwt token
+        302:
+          description: redirect
+          schema:
+            type: string
+        default:
+          $ref: '#/responses/Error'
+
+  /formLogin:
+    x-swagger-router-controller: auth
+    post:
+      operationId: formLogin
+      security:
+      - Oauth:
+        - open
+      consumes:
+      - application/x-www-form-urlencoded
+      parameters:
+      - in: formData
+        name: username
+        type: string
+        required: true
+      - in: formData
+        name: password
+        type: string
+        required: true
+      responses:
+        200:
+          description: ok
+          schema:
+            type: string
         302:
           description: redirect
           schema:
@@ -114,7 +142,7 @@ paths:
         description: Authentication object
         required: true
         schema:
-          $ref: '#/definitions/Credentials'
+          $ref: '#/definitions/Registration'
       responses:
         200:
           description: ok
@@ -134,7 +162,7 @@ paths:
       operationId: Logout
       security:
       - Oauth:
-        - user
+        - open
       responses:
         200:
           description: ok
@@ -142,6 +170,23 @@ paths:
             type: string
         302:
           description: redirect
+          schema:
+            type: string
+        default:
+          $ref: '#/responses/Error'
+
+  /token/refresh:
+    x-swagger-router-controller: token
+    get:
+      operationId: getRefresh
+      security:
+      - Oauth:
+        - user
+        - admin
+        - system
+      responses:
+        200:
+          description: ok
           schema:
             type: string
         default:
@@ -217,9 +262,16 @@ definitions:
       status:
         type: string
 
+  Registration:
+    type: object
+    allOf:
+      - $ref: '#/definitions/Credentials'
+    properties:
+      role:
+        type: string
+
   Credentials:
     type: object
-    additionalProperties: false
     properties:
       name:
         type: string
@@ -229,8 +281,6 @@ definitions:
         type: string
       socialCredentials:
         $ref: '#/definitions/SocialCredentials'
-      token:
-        type: string
 
   SocialCredentials:
     type: object
